      method. The method was size(history) and not desirable. (Robert Collins)

    * ``revision.revision_graph`` is deprecated, with no replacement function.
      The function was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

    * ``VersionedFile.has_ghost`` is now deprecated, as it is both expensive
      and unused outside of a single test. (Robert Collins)

  TESTING:

    * New -Dselftest_debug flag disables clearing of the debug flags during
      tests.  This is useful if you want to use e.g. -Dhpss to help debug a
      failing test.  Be aware that using this feature is likely to cause
      spurious test failures if used with the full suite. (Andrew Bennetts)

    * The test suite takes much less memory to run, and is a bit faster.  This
      is done by clearing most attributes of TestCases after running them, if
      they succeeded.  (Andrew Bennetts)

  INTERNALS:

    * ``VersionedFile`` now has a new method ``get_parent_map`` which, like
      ``Graph.get_parent_map`` returns a dict of key:parents. (Robert Collins)


bzr 1.3rc1 2008-03-16
---------------------

Bazaar has become part of the GNU project <http://www.gnu.org>

Many operations that act on history, including ``log`` and ``annotate`` are now
substantially faster.  Several bugs have been fixed and several new options and
features have been added.

  NOTES WHEN UPGRADING:

    * The backup directory created by ``upgrade`` is now called
      ``backup.bzr``, not ``.bzr.backup``. (Martin Albisetti)

  CHANGES:

    * A new repository format 'development' has been added. This format will
      represent the latest 'in-progress' format that the bzr developers are