@@ -74,6 +74,10 @@ IN DEVELOPMENT
     * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
       The method was size(history) and not desirable. (Robert Collins)
 
+    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
+      replacement method.  The method was size(history) and not desirable.
+      (Robert Collins)
+
     * ``VersionedFile.get_parents`` is deprecated, please use
       ``VersionedFile.get_parent_map``. (Robert Collins)
 
